# python_template

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: build_docker_image.yaml  ci.yaml  deploy_[SERVICE_NAME].yaml
src/: main.py
src/api/web/: app.py  commands.py
src/api/web/router/: default.py
tests/: conftest.py
tests/api/: test_web.py
